<resources>
    <string name="app_name">Thrifty</string>
    <string name="logo">THRIFTY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="currency_format">₱%.2f</string>
    <string name="income_trend">Income Trend</string>
    <string name="total_expense">Total Expense</string>
    <string name="current_balance">Current Balance</string>
    <string name="total_income">Total Income</string>
    <string name="new_expense">New Expense</string>
    <string name="new_income">New Income</string>
    <string name="total_balance">Total Balance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="end_session">End Session</string>
    <string name="high">High</string>
    <string name="expense_ranking">Expense Ranking</string>
    <string name="income_ranking">Income Ranking</string>
    <string name="low">Low</string>
    <string name="report">REPORT</string>
    <string name="initial_money">₱0.00</string>
    <string name="home_transactions_description">This is where the transactions are added</string>
    <string name="thrifty">THRIFTY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_passw">Enter Password</string>
    <string name="enter_mail">Enter Mail</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="don_t_have_">Don\'t have an account?</string>
    <string name="register_no">Register now</string>
    <string name="login_image_1">Login screen style 1</string>
    <string name="login_image_2">Login screen style 2</string>
    <string name="login_image_3">Login screen style 3</string>
    <string name="big_logo_version">Big Logo Version</string>
    <string name="password_icon">Password lock icon</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tst_img_desc">Logo image</string>
    <string name="give_money_desc">Illustration of giving money</string>
    <string name="sign_in_button">Sign In Button</string>
    <string name="sign_up_button">Sign Up Button</string>
    <string name="reg_img">reg_img</string>
    <string name="login_background_style">Login background style</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="no_records_found">No records found.</string>
</resources>