<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/tst_img"
        android:layout_width="281dp"
        android:layout_height="273dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/tst_img_desc"
        android:src="@drawable/tst_img" />

    <ImageView
        android:id="@+id/give_money"
        android:layout_width="281dp"
        android:layout_height="273dp"
        android:layout_below="@id/tst_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="-50dp"
        android:contentDescription="@string/give_money_desc"
        android:src="@drawable/give_money" />

    <ImageButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="157dp"
        android:layout_below="@id/give_money"
        android:layout_alignParentStart="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/sign_in_button"
        android:focusable="true"
        android:gravity="center"
        android:src="@drawable/sign_in_button" />

    <ImageButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="157dp"
        android:layout_below="@id/sign_in_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="87dp"
        android:layout_marginTop="-71dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/sign_up_button"
        android:focusable="true"
        android:gravity="center"
        android:src="@drawable/register_button" />
</RelativeLayout>